some links fixed

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <h3>Primary Supervisor: Professor Dr. Fazlı Can</h3>
           <div class="social-links">
             <div>
-              <a href="https://linkedin.com/in/username" target="_blank" rel="noopener noreferrer">
+              <a href="https://www.linkedin.com/in/fazlican/" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-linkedin"></i>
               </a>
             </div>
@@ -194,10 +194,10 @@
         </div>
         <div class="supervisor-div">
           <img src="https://images.unsplash.com/photo-1503264116251-35a269479413?auto=format&fit=crop&w=1200&q=80" alt="Innovation Expert">
-          <h3>Innovation Expert: TBD</h3>
+          <h3>Innovation Expert: Mustafa Sakalsız</h3>
           <div class="social-links">
             <div>
-              <a href="https://www.linkedin.com/in/fazlican/" target="_blank" rel="noopener noreferrer">
+              <a href="https://www.linkedin.com/in/sakalsiz/" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-linkedin"></i>
               </a>
             </div>
@@ -338,4 +338,5 @@
   </script>
 </body>
 </html>
+
 
